@@ -171,4 +171,18 @@ public abstract class List<A> implements Iterable<A> {
 }
      ]]></code>
     </test-code>
+    <test-code>
+        <description>#881 private final without setter is flagged</description>
+        <expected-problems>0</expected-problems>
+        <code><![CDATA[
+public class Foo {
+    private final String bar = "BAR";
+    public String getBar() { return bar; }
+
+    private String baz;
+    public void setBaz(String b) { baz = b; }
+    public String getBaz() { return baz; }
+}
+        ]]></code>
+    </test-code>
 </test-data>
