@@ -1,5 +1,6 @@
 ????? ??, 2013 - 5.1.0:
 
+Fixed bug  881: private final without setter is flagged
 Fixed bug 1059: Change rule name "Use Singleton" should be "Use Utility class"
 Fixed bug 1115: commentRequiredRule in pmd 5.1 is not working properly
 
